--- a/about/about.css
+++ b/about/about.css
@@ -2,44 +2,66 @@ html{
     margin: 0;
     padding: 0;
     min-height: 100vh;
+    max-width: 100vw;
+}
+/*Global nowrap*/
+.nowrap{
+    text-wrap: nowrap;
 }
 /*Intro styling */
-
+.fading_filter{
+    background-image: url(/about/Info_img/Intro_background-612x612.jpg);
+}
 .intro p {
     font-size: 5rem;
     text-align: left;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: whitesmoke;
+    text-shadow: 5px 5px 7px black;
     
 }
-.intro{
+.intro {
     display: flex;
-    flex-grow: 1;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255, 0.2);  
 }
 /* media queries for intro*/
 @media screen and (max-width: 516px){
+    html{
+        margin: 0;
+        padding: 0;
+        max-width: 100vw;
+        min-height: 100vh;
+    }
     .intro{
        display: flex;
-       flex-wrap: wrap;
-       
+       flex-wrap: wrap;   
     }
-   
    .intro_img{
         width: 250px;
-        height: fit-content;
+        height: auto;
+        margin-bottom: 0;
    }
    .intro p{
-        font-size: 3rem;
-        
+        font-size: 1.5rem;
+        margin-top:0;    
    }
 }
-.nowrap{
-    text-wrap: nowrap;
+@media screen and (max-width: 920px) {
+    .intro_img{
+        width: 400px;
+        height:auto;
+    }
+    .intro p{
+        font-size: 2rem;
+    }
 }
-.intro{
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-}
+
+
+/* Styling button */
+
 
 .about_us_btn{
     justify-content: center;
@@ -47,18 +69,77 @@ html{
     display:flex;
     flex-grow: 1;
     align-items: center;
+    background-color: rgb(255, 255, 0, 0.5);
 }
 
 .about_us_btn button{
-    background-color: rgb(250, 20, 20);
-    font-size: 1.5rem;
+    background-color: rgb(250, 20, 20, 0.9);
+    font-size: 1rem;
     padding: 1rem;
     border-radius: 2rem;
     margin: 1rem;
     color: whitesmoke;
-    border-color: red;
-    border-width: 0.3rem;
+    border-width: 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .about_us_btn button:hover{
     background-color: rgb(250, 20, 20, 0.7);
+}
+
+/* Responsive media query for button*/
+@media screen and (max-width: 516px) {
+    .about_us_btn{
+        display:flex; 
+        flex-direction: column;
+    }
+}
+
+/* Styling story content*/
+.story__container{
+    display: flex;
+    flex-direction: column;
+  
+}
+
+.story__container article{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: rgb(255, 255, 0, 0.5);
+}
+.story__container article:nth-child(odd){
+    flex-direction: row-reverse;
+    background-color: rgb(255, 0, 0, 0.5);
+}
+.story__container article p{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.1rem;
+    line-height: 2rem;
+    text-align: center;
+}
+.story__container img{
+    width: 400px;
+    height: fit-content;
+    border-radius: 50%;
+    display: float;
+}
+
+/*Responsive media query for story*/
+@media screen and (max-width: 516px) {
+    .story__container article{
+        flex-direction: column;
+    }
+    .story__container{
+        flex-direction: column;
+    }
+    .story__container img{
+        width: 150px;
+        height: fit-content;
+    }
+    .story__container article p{ 
+        font-size: 1.2rem;
+    }
+    .story__container article:nth-child(odd){
+        flex-direction: column;
+    }
 }
