--- a/about/about.css
+++ b/about/about.css
@@ -143,3 +143,103 @@ html{
         flex-direction: column;
     }
 }
+
+/*Styling for promotion box*/
+.promotion_box{
+    display:flex;
+    flex-direction: row;
+    align-items:center;
+    margin:40px;
+    border: solid 2px red;
+    border-radius: 2rem;
+    background-color: rgb(255, 0, 0, 0.3);
+}
+.promotion_box p {
+    font-size: 1.5rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.old_price{
+    text-decoration: line-through;
+}
+.img_price_container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.img_price_container img {
+    width: 300px;
+    height:fit-content;
+    border-radius: 50%;
+    margin-right: 60px;
+}
+
+.quantity_btn_container{
+    margin-left: 30%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+.quantity_btn_container input {
+    width: 100px; 
+}
+ 
+.increase_decrease_btn_container{
+    margin-top: 20px;
+    display:flex;
+    flex-direction: row;
+}
+.increase_btn{
+    margin-left: 20px;
+    background-color: green;
+}
+.decrease_btn{
+    background-color: red;
+}
+.increase_btn, .decrease_btn {
+    border-radius: 50%;
+}
+
+/*Responsive media query for promotion*/
+
+@media screen and (max-width:516px) {
+    .promotion_box{
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+    }
+    .img_price_container img {
+        width: 250px;
+        height:fit-content;
+        margin-right: 0;
+    }
+    .promotion_box p {
+        font-size: 1rem;
+        text-align: center;
+    }
+    .img_price_container{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .quantity_btn_container {
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+    }
+    .increase_decrease_btn_container{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width:920px){
+    .promotion_box{
+       width: 100vw;
+       margin-left:0;
+     }
+     .quantity_btn_container {
+        margin-left:3%;
+    }
+}
+
