--- a/about/about.css
+++ b/about/about.css
@@ -4,6 +4,9 @@ html{
     min-height: 100vh;
     max-width: 100vw;
 }
+*{
+    scroll-behavior: smooth;
+}
 /*Global nowrap*/
 .nowrap{
     text-wrap: nowrap;
@@ -17,8 +20,7 @@ html{
     text-align: left;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: whitesmoke;
-    text-shadow: 5px 5px 7px black;
-    
+    text-shadow: 5px 5px 7px black;  
 }
 .intro {
     display: flex;
@@ -65,7 +67,7 @@ html{
 
 .about_us_btn{
     justify-content: center;
-    padding: 1rem;
+    padding: 0.2rem;
     display:flex;
     flex-grow: 1;
     align-items: center;
@@ -96,12 +98,14 @@ html{
 
 /* Styling story content*/
 .story__container{
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
-  
+    gap: 10px;
 }
 
 .story__container article{
+    border-radius: 2rem;
     display:flex;
     flex-direction: row;
     align-items: center;
@@ -116,6 +120,8 @@ html{
     font-size: 1.1rem;
     line-height: 2rem;
     text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .story__container img{
     width: 400px;
@@ -128,9 +134,11 @@ html{
 @media screen and (max-width: 516px) {
     .story__container article{
         flex-direction: column;
+      
     }
     .story__container{
         flex-direction: column;
+        
     }
     .story__container img{
         width: 150px;
@@ -153,6 +161,7 @@ Design for Promotion news
     flex-direction: column;
     gap: 10px;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #promotionholder section{
@@ -232,3 +241,73 @@ Media query for promotion new
         margin-bottom: 10px;
     }
 }
+@media screen and (max-width: 920px){
+    #promotionholder section img{
+        width: 150px;
+        height: fit-content;
+    }
+}
+
+/*
+Styling the footer
+*/
+
+
+#footer{
+    margin-top: 0;
+    padding-bottom: 20px;
+    padding-top: 10px;
+    border: 1px solid red;
+    background-color: rgb(255, 50, 50);
+    border-radius: 2rem;
+    display:grid;
+    grid-template-columns: repeat(4,1fr);
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    gap: 10px;
+
+}
+#footer address{
+    display:flex;
+    flex-direction: column;
+    gap: 10px;
+}
+#footer p, a{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-left: 5px;
+    text-align: center;
+    font-size: 1rem;
+    text-decoration: none;
+    font-style: normal;
+    color: whitesmoke;
+    text-shadow: 5px 5px 7px black;  
+}
+#footer address p:hover, a:hover{
+   color:rgb(0, 0, 0, 0.5);
+}
+#pageup_btn{
+    width: 35px;
+    margin-left: 50%;
+    text-align: center;
+    align-items: center;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    background-color: rgb(0, 0, 0, 0.3);
+}
+#pageup_btn:hover{
+    color:white;
+    background-color: rgb(0, 0, 0, 0.7);
+}
+#footer #footer_title{
+    text-transform:uppercase;
+    font-size: 1.5rem;
+    text-shadow: 5px 5px 7px black;  
+    color:whitesmoke;
+}
+
+/*
+Media query for footer
+*/
+
+ 
