--- a/about/about.css
+++ b/about/about.css
@@ -29,38 +29,6 @@ html{
     align-items: center;
     background-color: rgb(255, 255, 255, 0.2);  
 }
-/* media queries for intro*/
-@media screen and (max-width: 516px){
-    html{
-        margin: 0;
-        padding: 0;
-        max-width: 100vw;
-        min-height: 100vh;
-    }
-    .intro{
-       display: flex;
-       flex-wrap: wrap;   
-    }
-   .intro_img{
-        width: 250px;
-        height: auto;
-        margin-bottom: 0;
-   }
-   .intro p{
-        font-size: 1.5rem;
-        margin-top:0;    
-   }
-}
-@media screen and (max-width: 920px) {
-    .intro_img{
-        width: 400px;
-        height:auto;
-    }
-    .intro p{
-        font-size: 2rem;
-    }
-}
-
 
 /* Styling button */
 
@@ -88,13 +56,7 @@ html{
     background-color: rgb(250, 20, 20, 0.7);
 }
 
-/* Responsive media query for button*/
-@media screen and (max-width: 516px) {
-    .about_us_btn{
-        display:flex; 
-        flex-direction: column;
-    }
-}
+
 
 /* Styling story content*/
 .story__container{
@@ -130,27 +92,7 @@ html{
     display: float;
 }
 
-/*Responsive media query for story*/
-@media screen and (max-width: 516px) {
-    .story__container article{
-        flex-direction: column;
-      
-    }
-    .story__container{
-        flex-direction: column;
-        
-    }
-    .story__container img{
-        width: 150px;
-        height: fit-content;
-    }
-    .story__container article p{ 
-        font-size: 1.2rem;
-    }
-    .story__container article:nth-child(odd){
-        flex-direction: column;
-    }
-}
+
 
 /*
 Design for Promotion news
@@ -222,32 +164,40 @@ Design for Promotion news
 }
 
 /*
-Media query for promotion new
+Styling the Career
 */
-@media screen and (max-width: 516px) {
-    #promotionholder section img{
-        width: 150px;
-        height: fit-content;
-    }
-    #promotionholder section{
-        display:flex;
-        flex-direction: column;
-        gap: 10px;
-    }
-    #promotionholder section p{
-        font-size: 1.5rem;
-    }
-    #promotionholder section #addtocart_btn{
-        margin-bottom: 10px;
-    }
-}
-@media screen and (max-width: 920px){
-    #promotionholder section img{
-        width: 150px;
-        height: fit-content;
-    }
-}
+#rescruitform{
 
+    display:flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.5rem;
+    margin-left: 20px;
+}
+#buttonarea{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+   
+}
+#submit_btn{
+    font-size: 1.5rem;
+    border-radius: 2rem;
+    background-color: greenyellow;
+}
+#submit_btn:hover{
+    background-color: green;
+}
+#reset_btn{
+    font-size: 1.5rem;
+    border-radius: 2rem;
+    background-color: hsla(0, 100%, 50%, 0.397);
+}
+#reset_btn:hover{
+    background-color: red;
+}
 /*
 Styling the footer
 */
@@ -306,8 +256,113 @@ Styling the footer
     color:whitesmoke;
 }
 
-/*
-Media query for footer
-*/
 
  
+/*
+media query
+*/
+
+@media screen and (max-width: 516px){
+    /*For the intro*/
+    html{
+        margin: 0;
+        padding: 0;
+        max-width: 100vw;
+        min-height: 100vh;
+    }
+    .intro{
+       display: flex;
+       flex-wrap: wrap;
+       flex-direction: column;   
+    }
+   .intro_img{
+        width: 200px;
+        height: auto;
+        margin: 0;
+   }
+   .intro p{
+        font-size: 1.5rem;
+        margin-top:0;    
+   }
+   /*for the button navigation*/
+   .about_us_btn{
+    display:flex; 
+    flex-direction: column;
+    }
+    /*For the story*/
+    .story__container article{
+        flex-direction: column;
+    
+    }
+    .story__container{
+        flex-direction: column;
+        
+    }
+    .story__container img{
+        width: 150px;
+        height: fit-content;
+    }
+    .story__container article p{ 
+        font-size: 1rem;
+    }
+    .story__container article:nth-child(odd){
+        flex-direction: column;
+    }
+
+      /*For the promotion*/
+    #promotionholder section img{
+        width: 150px;
+        height: fit-content;
+    }
+    #promotionholder section{
+        display:flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    #promotionholder section p{
+        font-size: 1.5rem;
+    }
+    #promotionholder section #addtocart_btn{
+        margin-bottom: 10px;
+    }
+      /*For the footer*/
+    #footer{
+        display:flex;
+        flex-direction: column;
+    }
+    #footer #footer_title{
+        font-size: 0.8rem;  
+    }
+    #footer p, a{
+        font-size: 0.8rem;
+    }
+}
+
+
+
+
+
+
+
+@media screen and (min-width: 540px) {
+    /*For the intro*/
+    html{
+        margin: 0;
+        padding: 0;
+        max-width: 100vw;
+        min-height: 100vh;
+    }
+    
+    .intro_img{
+        width: 200px;
+        height:auto;
+    }
+    .intro p{
+        font-size: 2rem;
+    }
+      /*For the promotion*/
+    #promotionholder section img{
+        width: 150px;
+        height: fit-content;
+    }
+}
