--- a/about/about.css
+++ b/about/about.css
@@ -402,6 +402,16 @@ media query
     #promotionholder section #addtocart_btn{
         margin-bottom: 10px;
     }
+    #booking_img{
+        width: 400px;
+        height:fit-content;
+    }
+    #bookingform{
+        display: flex;
+        flex-direction: column;
+        align-items: normal;
+        justify-content: none;
+    }
       /*For the footer*/
     #footer{
         display:flex;
@@ -444,6 +454,10 @@ media query
     #promotionholder section img{
         width: 150px;
         height: fit-content;
+    }
+    #booking_img{
+        width: 700px;
+        height:fit-content;
     }
     #footer #footer_title{
         font-size: 1rem;  
