--- a/about/about.css
+++ b/about/about.css
@@ -7,9 +7,59 @@ html{
 *{
     scroll-behavior: smooth;
 }
+/*
+Code header of Tri
+*/
+/* header{
+    position: fixed;
+    top:0; left: 0; right:0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background:#fff;
+    padding: 1rem 3%;
+    height: 8rem;  
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1); 
+  }
+  header .logo{
+    font-size: 1.8rem;
+    font-weight: bolder;
+    color:#666;
+  }
+  
+  header .logo.logoonggia img{
+    padding-right: .5rem;
+    color:var(--red);
+    width: 100px;
+    border-radius: 50%;
+  }
+  
+  header .navbar a{
+    font-size: 2.5rem;
+    margin-left: 4rem;
+    color: #666;
+  }
+  
+  header .navbar a:hover{
+    color:red;
+  }
+  
+  #menu-bar{
+    font-size: 3rem;
+    cursor: pointer;
+    color: #666;
+    border: 0.1rem solid #666;
+    border-radius: 0.3rem;
+    padding: 0.5rem 1.5rem;
+    display: none;
+  }   */
 /*Global nowrap*/
 .nowrap{
     text-wrap: nowrap;
+}
+main{
+    margin-top: 160px;
 }
 /*Intro styling */
 .fading_filter{
