--- a/about/about.css
+++ b/about/about.css
@@ -43,11 +43,12 @@ main{
     flex-grow: 1;
     align-items: center;
     background-color: rgb(255, 255, 0, 0.5);
+    height: 150px;
 }
 
 .about_us_btn button{
     background-color: rgb(250, 20, 20, 0.9);
-    font-size: 1rem;
+    font-size: 4rem;
     padding: 1rem;
     border-radius: 2rem;
     margin: 1rem;
@@ -82,7 +83,7 @@ main{
 }
 .story__container article p{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.1rem;
+    font-size: 1.8rem;
     line-height: 2rem;
     text-align: center;
     margin-left: 10px;
@@ -296,34 +297,35 @@ Styling the footer
     align-items: center;
     justify-content: center;
     align-content: center;
-    gap: 10px;
+    gap: 180px;
 
 }
 #footer address{
     display:flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
 }
 #footer p, a{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-left: 5px;
     text-align: center;
-    font-size: 1rem;
+    font-size: 2rem;
     text-decoration: none;
     font-style: normal;
     color: whitesmoke;
-    text-shadow: 5px 5px 7px black;  
+    /* text-shadow: 5px 5px 7px black;   */
 }
 #footer address p:hover, a:hover{
    color:rgb(0, 0, 0, 0.5);
 }
 #pageup_btn{
-    width: 35px;
+    width: 120px;
     text-align: center;
     align-items: center;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     background-color: rgb(0, 0, 0, 0.3);
+    font-size: 6rem;
 }
 #pageup_btn:hover{
     color:white;
@@ -331,7 +333,7 @@ Styling the footer
 }
 #footer #footer_title{
     text-transform:uppercase;
-    font-size: 1.5rem;
+    font-size: 6rem;
     text-shadow: 5px 5px 7px black;  
     color:whitesmoke;
 }
@@ -348,7 +350,7 @@ media query
         margin: 0;
         padding: 0;
         max-width: 100vw;
-        min-height: 100vh;
+        min-height: 100vh;  
     }
     .intro{
        display: flex;
