--- a/food/style.css
+++ b/food/style.css
@@ -59,6 +59,10 @@ header{
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 }
 
+#bgColorHeader {
+  background-color: rgb(223, 223, 61);
+  
+}
 
 header .logo{
   font-size: 1.8rem;
@@ -117,7 +121,7 @@ header .navbar a:hover{
   gap: 1.5 rem;
   min-height: 100vh;
   align-items: center;
-  background: url(../images/home-bg.jpg) no-repeat;
+  background: url(/UIT_Team02_Web/about/Info_img/Intro_background-612x612.jpg) no-repeat;
   background-size: cover;
   background-position: center
 }
@@ -146,14 +150,16 @@ header .navbar a:hover{
   }
   
   .home .content h3{
-    font-size: 5rem;
-    color:#333;
+    font-size: 10rem;
+    font-weight: 700;
+    color: #fff;
   }
   
   .home .content p{
-    font-size: 1.7rem;
-    color:#666;
-    padding:1rem 0;
+    color: #fff;
+  padding: 1rem 0;
+  font-size: 3.5rem;
+  font-weight: 400;
   }
 
   header{
@@ -190,11 +196,14 @@ header .navbar a:hover{
   /* render all product */
 
  .box-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap:1.5rem;
-    justify-content: center;
-    margin: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: center;
+  margin: 10px;
+  background: url(/UIT_Team02_Web/about/Info_img/Intro_background-612x612.jpg) no-repeat;
+  background-size: cover;
+  background-position: center
   }
 
   
@@ -210,8 +219,8 @@ header .navbar a:hover{
   }
   
  .box-container .box img{
-    height: 300px;
-    width: 300px;
+    height: 350px;
+    width: 350px;
     object-fit: cover;
     top:-100%;
   }
@@ -282,7 +291,7 @@ header .navbar a:hover{
 
 
 /* style search input  */
-.wrapper {
+#wrapper {
 width: 95%;
 margin: 0 auto;
 }
@@ -292,6 +301,9 @@ margin: 0 auto;
   text-align: center;
   
 }
+::placeholder {
+  color: #333;  opacity: 1; /* Firefox */
+}
 
 #search-container input {
  background-color: transparent;
@@ -299,6 +311,7 @@ margin: 0 auto;
  border-bottom: 2px solid var(--red);
  padding: 1em 0.3em;
  font-size: 20px;
+ 
 }
 
 #search-container input:focus {
@@ -429,4 +442,20 @@ font-size: large;
   background-color: #dc3545;
   transform: scale(1.1);
 }
+
+
+.wapper-buttonFilter {
+  /* Set the background image */
+  background-image: url(/UIT_Team02_Web/food/images/bgSearch.jpg);
+  /* Set the size and other styles as needed */
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+
+
+
+
+
 
