--- a/about/about.css
+++ b/about/about.css
@@ -7,6 +7,60 @@ html{
 *{
     scroll-behavior: smooth;
 }
+Code header of Tri
+*/
+#bgColorHeader{
+    display: flex;
+}
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 3%;
+    height: 5.5rem;
+  }
+
+  header .logo{
+    font-size: 2.8rem;
+    font-weight: bolder;
+    color:#666;
+  }
+  
+  header .logo.logoonggia img{
+    padding-right: .5rem;
+    color:var(--red);
+    width: 100px;
+    border-radius: 50%;
+  }
+  
+  header .navbar a{
+    font-size: 2.5rem;
+    margin-left: 4rem;
+    color: #666;
+    text-shadow:none;
+    
+  }
+  
+  header .navbar a:hover{
+    color:red;
+  }
+  
+  #menu-bar{
+    font-size: 3rem;
+    cursor: pointer;
+    color: #666;
+    border: 0.1rem solid #666;
+    border-radius: 0.3rem;
+    padding: 0.5rem 1.5rem;
+    display: none;
+  }  
+
+
 /*Global nowrap*/
 .nowrap{
     text-wrap: nowrap;
@@ -43,12 +97,11 @@ main{
     flex-grow: 1;
     align-items: center;
     background-color: rgb(255, 255, 0, 0.5);
-    height: 150px;
 }
 
 .about_us_btn button{
     background-color: rgb(250, 20, 20, 0.9);
-    font-size: 4rem;
+    font-size: 1rem;
     padding: 1rem;
     border-radius: 2rem;
     margin: 1rem;
@@ -83,7 +136,7 @@ main{
 }
 .story__container article p{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.8rem;
+    font-size: 1.1rem;
     line-height: 2rem;
     text-align: center;
     margin-left: 10px;
@@ -297,35 +350,34 @@ Styling the footer
     align-items: center;
     justify-content: center;
     align-content: center;
-    gap: 180px;
+    gap: 10px;
 
 }
 #footer address{
     display:flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 #footer p, a{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-left: 5px;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1rem;
     text-decoration: none;
     font-style: normal;
     color: whitesmoke;
-    /* text-shadow: 5px 5px 7px black;   */
+    text-shadow: 5px 5px 7px black;  
 }
 #footer address p:hover, a:hover{
    color:rgb(0, 0, 0, 0.5);
 }
 #pageup_btn{
-    width: 120px;
+    width: 35px;
     text-align: center;
     align-items: center;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     background-color: rgb(0, 0, 0, 0.3);
-    font-size: 6rem;
 }
 #pageup_btn:hover{
     color:white;
@@ -333,7 +385,7 @@ Styling the footer
 }
 #footer #footer_title{
     text-transform:uppercase;
-    font-size: 6rem;
+    font-size: 1.5rem;
     text-shadow: 5px 5px 7px black;  
     color:whitesmoke;
 }
@@ -350,7 +402,7 @@ media query
         margin: 0;
         padding: 0;
         max-width: 100vw;
-        min-height: 100vh;  
+        min-height: 100vh;
     }
     .intro{
        display: flex;
