done at codespace in branch Tri

--- a/food/cart.css
+++ b/food/cart.css
@@ -121,6 +121,15 @@ header{
     font-size: 14px;
   }
 
+  .custom-button {
+    position: relative;
+    text-align: left; 
+    left: 80%;
+    top:10%;
+    margin-bottom: 10px;
+    font-size: 22px;
+    /* Add any other styles you want for your button here */
+}
 
 
 
