--- a/about/about.css
+++ b/about/about.css
@@ -22,27 +22,28 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 1rem 3%;
-    height: 5.5rem;
+    height: 6.8rem;
   }
 
   header .logo{
-    font-size: 2.8rem;
+    font-size: 3rem;
     font-weight: bolder;
     color:#666;
   }
   
   header .logo.logoonggia img{
-    padding-right: .5rem;
+    padding-right: .1rem;
     color:var(--red);
     width: 100px;
     border-radius: 50%;
   }
   
   header .navbar a{
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-left: 4rem;
     color: #666;
     text-shadow:none;
+    text-decoration: none;
     
   }
   
