--- a/food/style.css
+++ b/food/style.css
@@ -65,6 +65,7 @@ header {
 
 #bgColorHeader {
   background-color: rgb(223, 223, 61);
+  
 
 }
 
@@ -221,7 +222,7 @@ header .navbar span {
 
 
 .box-container .box {
-  flex: 1 1 1;
+  flex: 1 1 1 ;
   position: relative;
   overflow: hidden;
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
@@ -232,8 +233,8 @@ header .navbar span {
 }
 
 .box-container .box img {
-  height: 350px;
-  width: 350px;
+  height: 250px;
+  width: 250px;
   object-fit: cover;
   top: -100%;
 }
@@ -242,23 +243,29 @@ header .navbar span {
   background: #fff;
   padding: 2rem;
   text-align: center;
+  object-fit: cover;
+  width: 250px;
+  height: 200px;
+
+
 }
 
 
 .box-container .box .content-container h3 {
-  font-size: 2rem;
+  font-size: 1.6rem;
   color: #333;
 
 }
 
 .box-container .box .content-container h4 {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   color: #666;
   padding: 1rem 0;
 }
 
 .box-container .box:hover .image {
   top: 0;
+ 
 }
 
 .hide {
@@ -379,11 +386,11 @@ header .navbar span {
 }
 
 .products-container {
-  margin-top: 98px;
+  margin-top: 0;
   margin-bottom: 0;
-  width: 88%;
+  width: 100%;
   float: center;
-  font-size: large;
+  font-size: 20px;
 
 }
 
@@ -399,7 +406,7 @@ header .navbar span {
 }
 
 .product {
-  margin-left: 11%;
+  margin-left: 0;
   margin-bottom: 0;
   width: 98%;
   font-size: large;
@@ -411,14 +418,13 @@ header .navbar span {
 }
 
 .product-total {
-  width: 98%;
+  width: 100%;
   font-size: large;
   font-weight: bolder;
   float: right;
   margin-left: 66%;
   display: flex;
-  margin-bottom: 10%;
-
+  margin-bottom: 2%;
 }
 
 .col {
@@ -440,15 +446,15 @@ header .navbar span {
 
 /* STYLE DETAIL PAGE */
 .detail-container {
-   margin-top: 18rem;
-  margin-left: 18rem;
+ 
+  background-image: url(./images/bgSearch.jpg);
+
 }
 #product-image {
   margin: auto;
-  background-image: url(/food/images/bgSearch.jpg);
   margin-bottom: 16px;
-    margin-top: 100px;
-   width: 400px;
+  margin-top: 80px;
+  width: 400px;
   height: 400px;
 }
 
@@ -468,7 +474,7 @@ header .navbar span {
   font-size: 20px;
   border: none;
   border-radius: .8rem;
-  margin: .2rem .8rem auto auto;
+  margin: .2rem .8rem 2rem auto;
   transition: transform .2s;
   /* Animation */
   background-color: #6579ff;
@@ -500,7 +506,6 @@ header .navbar span {
 }
 
 #productList, .form-container{
-
   background-image: url(/food/images/home-bg.jpg);
   /* Set the size and other styles as needed */
   width: 100%;
@@ -508,3 +513,56 @@ header .navbar span {
   position: relative;
 
 }
+
+
+#footer{
+  margin-top: 0;
+  padding-bottom: 20px;
+  padding-top: 10px;
+  border: 1px solid red;
+  background-color: rgb(255, 50, 50);
+  border-radius: 2rem;
+  display:grid;
+  grid-template-columns: repeat(4,1fr);
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  gap: 10px;
+
+}
+#footer address{
+  display:flex;
+  flex-direction: column;
+  gap: 10px;
+}
+#footer p, a{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-left: 5px;
+  text-align: center;
+  font-size: 1rem;
+  text-decoration: none;
+  font-style: normal;
+  color: whitesmoke;
+}
+#footer address p:hover, a:hover{
+ color:rgb(0, 0, 0, 0.5);
+}
+#pageup_btn{
+  width: 35px;
+  text-align: center;
+  align-items: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  background-color: rgb(0, 0, 0, 0.3);
+}
+#pageup_btn:hover{
+  color:white;
+  background-color: rgb(0, 0, 0, 0.7);
+}
+#footer #footer_title{
+  text-transform:uppercase;
+  font-size: 1.5rem;
+  text-shadow: 5px 5px 7px black;  
+  color:whitesmoke;
+}
+
