--- a/food/cart.css
+++ b/food/cart.css
@@ -133,4 +133,74 @@ header{
 
 
 
+.bgCartPage {
+  /* Set the background image */
+  background-image: url(images/home-bg.jpg);
+  /* Set the size and other styles as needed */
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
 
+
+.products-container {
+  margin-top: 6%;
+  margin-bottom: 0;
+  width: 100%;
+  float: center;
+  font-size: 20px;
+
+}
+
+.product-title {
+  margin-bottom: 0;
+  width: 100%;
+  font-size: large;
+  display: flex;
+  font-weight: bolder;
+  border-bottom: 1px solid #000;
+
+}
+
+.product {
+  margin-left: 0;
+  margin-bottom: 0;
+  width: 98%;
+  font-size: large;
+  display: flex;
+  border-bottom: 1px solid #000;
+  margin-top: 1rem;
+
+
+}
+
+.product-total {
+  width: 100%;
+  font-size: large;
+  font-weight: bolder;
+  float: right;
+  margin-left: 66%;
+  display: flex;
+  margin-bottom: 2%;
+}
+
+.col {
+  flex-grow: 1;
+}
+
+.no {
+  margin-left: 2%;
+  margin-right: 8%;
+}
+
+.btnRemove,
+.btnQuantity {
+  color: #ddd;
+  background-color: #6579ff;
+  width: 26px;
+  border-radius: 50%;
+}
+
+#bgColorHeader {
+  background-color: rgb(223, 223, 61);
+}
