--- a/admin/admin.css
+++ b/admin/admin.css
@@ -81,7 +81,10 @@ header .navbar a {
     font-size: 2.5rem;
     margin-left: 4rem;
     color: #666;
+    text-shadow: none;
+  text-decoration: none;
 }
+
 
 header .navbar a:hover {
     color: red;
